# Ambev-Monitoring-System

./: README.md  index.html  script.js  style.css  versao-1.cpp
ESP32/: Fluxo_Ligar_LED.json  READE.md
ESP32/Ligar_Desligar_Led_MQTT/: Ligar_Desligar_Led_MQTT.ino
Sensor de Cor/: README.md
Sensor de Cor/sludge-level/: CMakeLists.txt  sludge-level.c
Simulação/: script.js  simu.html  style.css
ambev/: CMakeLists.txt  README.md  button-buzzer.c  flows.json  lwipopts.h
configuracao-editores/: README.md
configuracao-editores/layout/: pg.html  script.js  style.css
código_buzzer_ambev/: CMakeLists.txt  README.md  button-buzzer.c  fluxo.json  main.c
